[package]
name = "fzq"
version = "0.1.0"
authors = ["nkzawa <naoyuki.kanezawa@gmail.com>"]
edition = "2018"
description = "Fuzzy filter matching lines"
keywords = ["cli", "fuzzy", "unique", "filter"]
homepage = "https://github.com/nkzawa/fzq"
repository = "https://github.com/nkzawa/fzq"
documentation = "https://docs.rs/fzq"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
failure = "^0.1.5"
strsim = "^0.9.2"
structopt = "^0.2.18"

[dev-dependencies]
assert_cmd = "^0.11.1"
predicates = "^1.0.0"
tempfile = "^3.1.0"
